--- a/src/application/templates/results.html
+++ b/src/application/templates/results.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="{% static 'styles.css' %}">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 </head>
-<body>
+<body class="page-body">
   <div class="page-content">
     <main class="py-5">
       <div class="container container-wide">
