--- a/src/application/static/styles.css
+++ b/src/application/static/styles.css
@@ -127,6 +127,10 @@ body {
   z-index: 1050;
 }
 
+.plot-roll-left {
+  transform: scaleX(-1);
+}
+
 .stats-chart {
   min-height: 300px;
 }
@@ -166,6 +170,25 @@ body {
   min-height: 240px;
 }
 
+.stats-visual-pane {
+  flex: 1 1 auto;
+  min-height: 240px;
+  display: flex;
+}
+
+.stats-plot {
+  min-height: 240px;
+  width: 100%;
+  height: 100%;
+  flex: 1 1 auto;
+}
+
+.stats-plot .plot-container,
+.stats-plot .svg-container {
+  width: 100% !important;
+  height: 100% !important;
+}
+
 .stats-video {
   width: 100%;
   height: 100%;
@@ -177,4 +200,5 @@ body {
     width: calc(100% - 1.5rem);
     bottom: 16px;
   }
+
 }
