--- a/src/application/templates/home.html
+++ b/src/application/templates/home.html
@@ -184,15 +184,15 @@
               </div>
               <div class="col">
                 <label for="age" class="form-label">Age (years)</label>
-                <input type="number" class="form-control" id="age" name="age" min="0" step="1" placeholder="e.g. 30" required>
+                <input type="number" class="form-control" id="age" name="age" min="0" step="1" placeholder="e.g. 30">
               </div>
               <div class="col">
                 <label for="height" class="form-label">Height (m)</label>
-                <input type="number" class="form-control" id="height" name="height" min="0" step="0.01" placeholder="e.g. 1.78" required>
+                <input type="number" class="form-control" id="height" name="height" min="0" step="0.01" placeholder="e.g. 1.78">
               </div>
               <div class="col">
                 <label for="weight" class="form-label">Weight (kg)</label>
-                <input type="number" class="form-control" id="weight" name="weight" min="0" step="0.1" placeholder="e.g. 75" required>
+                <input type="number" class="form-control" id="weight" name="weight" min="0" step="0.1" placeholder="e.g. 75">
               </div>
             </div>
           </div>
