--- a/src/application/templates/home.html
+++ b/src/application/templates/home.html
@@ -305,7 +305,7 @@
             <div class="row row-cols-1 row-cols-md-2 g-3 mt-2">
               <div class="col">
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="flkFilter" name="flk_filter" checked>
+                  <input class="form-check-input" type="checkbox" id="flkFilter" name="flk_filter">
                   <label class="form-check-label" for="flkFilter">Enable FLK filter</label>
                 </div>
               </div>
