--- a/src/application/templates/statistics.html
+++ b/src/application/templates/statistics.html
@@ -41,9 +41,9 @@
               <div class="row g-3 align-items-center">
                 <div class="col-md-3">
                   <div class="btn-group btn-group-sm w-100" role="group" aria-label="Visualization selection">
-                    <button class="btn btn-primary btn-sm" type="button" id="visualToggleVideo">Video</button>
-                    <button class="btn btn-outline-primary btn-sm" type="button" id="visualToggleSkeleton">Skeleton</button>
-                    <button class="btn btn-outline-primary btn-sm" type="button" id="visualToggleAugmented">Augmented</button>
+                    <button class="btn btn-primary btn-sm visual-toggle" type="button" id="visualToggleVideo">Video</button>
+                    <button class="btn btn-outline-primary btn-sm visual-toggle" type="button" id="visualToggleSkeleton">Skeleton</button>
+                    <button class="btn btn-outline-primary btn-sm visual-toggle" type="button" id="visualToggleAugmented">Augmented</button>
                   </div>
                 </div>
                 <div class="col-md-9">
